// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/edit.vue form should have default value 1`] = `
Object {
  "apartment": "",
  "billingDestination": Object {
    "addr": Object {
      "apartment": "",
      "city": "大阪市阿倍野区",
      "postcode": "545-0034",
      "prefecture": 27,
      "street": "阿倍野元町2-6-12",
    },
    "agentName": "新井 恵梨香",
    "contractNumber": "0943992350",
    "corporationName": "デイサービス土屋 中野中央",
    "destination": 1,
    "paymentMethod": 3,
    "tel": "0731-85-3606",
  },
  "birthday": "1974-11-01",
  "city": "大阪市阿倍野区",
  "contacts": Array [
    Object {
      "name": "江口 順子",
      "relationship": 30,
      "tel": "0882-51-8663",
    },
    Object {
      "name": "",
      "relationship": 10,
      "tel": "0284-91-2743",
    },
  ],
  "displayName": "新井 恵梨香",
  "familyName": "新井",
  "givenName": "恵梨香",
  "isEnabled": false,
  "phoneticDisplayName": "アライ エリカ",
  "phoneticFamilyName": "アライ",
  "phoneticGivenName": "エリカ",
  "postcode": "545-0034",
  "prefecture": 27,
  "sex": 2,
  "street": "阿倍野元町2-6-12",
}
`;

exports[`pages/users/_id/edit.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form z-user-form"
    data-form=""
    novalidate="novalidate"
  >
    <div>
      <div
        class="z-form-card-stub"
        title="基本情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z"
          label=""
        >
          <v-col-stub
            class="px-1 pt-0"
            tag="div"
          >
            <div
              class="root"
              data-is-enabled=""
              data-z-form-card-item=""
            >
              <div
                class="v-input v-input--dense theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="height: auto;"
                  >
                    <div
                      class="v-input--radio-group__input"
                      role="radiogroup"
                    >
                      <legend
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        <div>
                          状態
                        </div>
                      </legend>
                      <z-flex-stub>
                        <div
                          class="mr-4"
                        >
                          <div
                            class="v-radio theme--light"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light"
                              />
                              <input
                                aria-checked="false"
                                role="radio"
                                type="radio"
                                value="true"
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                            </div>
                            <label
                              class="v-label theme--light"
                              style="left: 0px; position: relative;"
                            >
                              利用中
                            </label>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <div
                            class="v-radio theme--light v-item--active"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--dense mdi mdi-radiobox-marked theme--light primary--text"
                              />
                              <input
                                aria-checked="true"
                                role="radio"
                                type="radio"
                                value="false"
                              />
                              <div
                                class="v-input--selection-controls__ripple primary--text"
                              />
                            </div>
                            <label
                              class="v-label theme--light"
                              style="left: 0px; position: relative;"
                            >
                              利用終了
                            </label>
                          </div>
                        </div>
                      </z-flex-stub>
                    </div>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </v-col-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M10 4a2 2 0 104 0 2 2 0 10-4 0M19 13v-2c-1.54.02-3.09-.75-4.07-1.83l-1.29-1.43c-.17-.19-.38-.34-.61-.45-.01 0-.01-.01-.02-.01H13c-.35-.2-.75-.3-1.19-.26C10.76 7.11 10 8.04 10 9.09V15c0 1.1.9 2 2 2h5v5h2v-5.5c0-1.1-.9-2-2-2h-3v-3.45c1.29 1.07 3.25 1.94 5 1.95zm-6.17 5c-.41 1.16-1.52 2-2.83 2-1.66 0-3-1.34-3-3 0-1.31.84-2.41 2-2.83V12.1a5 5 0 105.9 5.9h-2.07z"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-family-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          姓 *
                        </label>
                        <input
                          data-family-name-input=""
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-given-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          名 *
                        </label>
                        <input
                          data-given-name-input=""
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-phonetic-family-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          フリガナ：姓 *
                        </label>
                        <input
                          data-phonetic-family-name-input=""
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-phonetic-given-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          フリガナ：名 *
                        </label>
                        <input
                          data-phonetic-given-name-input=""
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M7.5,2A2,2 0 0,1 9.5,4A2,2 0 0,1 7.5,6A2,2 0 0,1 5.5,4A2,2 0 0,1 7.5,2M6,7H9A2,2 0 0,1 11,9V14.5H9.5V22H5.5V14.5H4V9A2,2 0 0,1 6,7M16.5,2A2,2 0 0,1 18.5,4A2,2 0 0,1 16.5,6A2,2 0 0,1 14.5,4A2,2 0 0,1 16.5,2M15,22V16H12L14.59,8.41C14.84,7.59 15.6,7 16.5,7C17.4,7 18.16,7.59 18.41,8.41L21,16H18V22H15Z"
          label=""
        >
          <div
            class="root"
            data-sex=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      性別 *
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        女性
                      </div>
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                      value="2"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M12,6C13.11,6 14,5.1 14,4C14,3.62 13.9,3.27 13.71,2.97L12,0L10.29,2.97C10.1,3.27 10,3.62 10,4A2,2 0 0,0 12,6M16.6,16L15.53,14.92L14.45,16C13.15,17.29 10.87,17.3 9.56,16L8.5,14.92L7.4,16C6.75,16.64 5.88,17 4.96,17C4.23,17 3.56,16.77 3,16.39V21A1,1 0 0,0 4,22H20A1,1 0 0,0 21,21V16.39C20.44,16.77 19.77,17 19.04,17C18.12,17 17.25,16.64 16.6,16M18,9H13V7H11V9H6A3,3 0 0,0 3,12V13.54C3,14.62 3.88,15.5 4.96,15.5C5.5,15.5 6,15.3 6.34,14.93L8.5,12.8L10.61,14.93C11.35,15.67 12.64,15.67 13.38,14.93L15.5,12.8L17.65,14.93C18,15.3 18.5,15.5 19.03,15.5C20.11,15.5 21,14.62 21,13.54V12A3,3 0 0,0 18,9Z"
          label=""
        >
          <div
            class="root"
            data-birthday=""
            data-z-form-card-item=""
          >
            <div
              class="z-date-field z-date-field--birthday"
              max="2018-05-17"
            >
              <div
                class="v-input v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        生年月日 *
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <transition-group-stub
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2018-05-17"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="date"
                  value="1974-11-01"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-clear=""
                    text=""
                  >
                    クリア
                  </a>
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,10 7,12 12,18.71C17,12 17,10 17,9A5,5 0 0,0 12,4Z"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-postcode=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          郵便番号 *
                        </label>
                        <input
                          type="tel"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-input__append-outer"
                  >
                    <z-postcode-resolver-stub
                      postcode="545-0034"
                    />
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-prefecture=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          都道府県 *
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            大阪府
                          </div>
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                          value="27"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
          <div
            class="root"
            data-city=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      市区町村 *
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="root"
            data-street=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      町名・番地 *
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="root"
            data-apartment=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      建物名など
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-tel=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          電話番号 *
                        </label>
                        <input
                          data-tel-input=""
                          type="tel"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-relationship=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          続柄・関係 *
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            弁護士
                          </div>
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--clear"
                          >
                            <button
                              aria-label="clear icon"
                              class="v-icon notranslate v-icon--link mdi mdi-close theme--light"
                              type="button"
                            />
                          </div>
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                          value="30"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          名前 *
                        </label>
                        <input
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-tel=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          予備（1）電話番号
                        </label>
                        <input
                          data-tel-input=""
                          type="tel"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-relationship=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          予備（1）続柄・関係
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            本人
                          </div>
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--clear"
                          >
                            <button
                              aria-label="clear icon"
                              class="v-icon notranslate v-icon--link mdi mdi-close theme--light"
                              type="button"
                            />
                          </div>
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                          value="10"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="4"
              tag="div"
            >
              <!---->
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-tel=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          予備（2）電話番号
                        </label>
                        <input
                          data-tel-input=""
                          type="tel"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="6"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-relationship=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          予備（2）続柄・関係
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="4"
              tag="div"
            >
              <div
                class="root"
                data-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          予備（2）名前
                        </label>
                        <input
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <div
        class="z-form-card-stub"
        title="請求先情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
          label=""
        >
          <div
            class="root mb-2"
            data-destination=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: auto;"
                >
                  <div
                    class="v-input--radio-group__input"
                    role="radiogroup"
                  >
                    <legend
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      <div>
                        請求先
                      </div>
                    </legend>
                    <z-flex-stub>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            本人
                          </label>
                        </div>
                      </div>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            本人以外（個人）
                          </label>
                        </div>
                      </div>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="radio"
                              type="radio"
                              value="3"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            本人以外（法人・団体）
                          </label>
                        </div>
                      </div>
                    </z-flex-stub>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="root mb-2"
            data-payment-method=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: auto;"
                >
                  <div
                    class="v-input--radio-group__input"
                    role="radiogroup"
                  >
                    <legend
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      <div>
                        支払方法
                      </div>
                    </legend>
                    <z-flex-stub>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            口座振替
                          </label>
                        </div>
                      </div>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light"
                            />
                            <input
                              aria-checked="false"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            銀行振込
                          </label>
                        </div>
                      </div>
                      <div
                        class="mr-4"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--dense mdi mdi-radiobox-marked theme--light primary--text"
                            />
                            <input
                              aria-checked="true"
                              role="radio"
                              type="radio"
                              value="3"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: relative;"
                          >
                            集金
                          </label>
                        </div>
                      </div>
                    </z-flex-stub>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <!---->
        <!---->
        <!---->
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="保存"
      />
    </div>
  </form>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "apartment") 1`] = `
<div
  class="root"
  data-apartment=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            建物名など
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              建物名などを入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "birthday") 1`] = `
<div
  class="root"
  data-birthday=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field z-date-field--birthday"
    max="2018-05-17"
  >
    <div
      class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: -24px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label v-label--active theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              生年月日 *
            </label>
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                生年月日を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2018-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        value="1974-11-01"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "city") 1`] = `
<div
  class="root"
  data-city=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            市区町村 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              市区町村を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "familyName") 1`] = `
<div
  class="root"
  data-family-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            姓 *
          </label>
          <input
            data-family-name-input=""
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              姓を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "givenName") 1`] = `
<div
  class="root"
  data-given-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            名 *
          </label>
          <input
            data-given-name-input=""
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              名を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "isEnabled") 1`] = `
<div
  class="root"
  data-is-enabled=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <legend
            class="v-label theme--light error--text"
            style="left: 0px; position: relative;"
          >
            <div>
              状態
            </div>
          </legend>
          <z-flex-stub>
            <div
              class="mr-4"
            >
              <div
                class="v-radio theme--light"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-icon--dense mdi mdi-radiobox-blank theme--light error--text"
                  />
                  <input
                    aria-checked="false"
                    role="radio"
                    type="radio"
                    value="true"
                  />
                  <div
                    class="v-input--selection-controls__ripple error--text"
                  />
                </div>
                <label
                  class="v-label theme--light error--text"
                  style="left: 0px; position: relative;"
                >
                  利用中
                </label>
              </div>
            </div>
            <div
              class="mr-4"
            >
              <div
                class="v-radio theme--light v-item--active"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-icon--dense mdi mdi-radiobox-marked theme--light error--text"
                  />
                  <input
                    aria-checked="true"
                    role="radio"
                    type="radio"
                    value="false"
                  />
                  <div
                    class="v-input--selection-controls__ripple error--text"
                  />
                </div>
                <label
                  class="v-label theme--light error--text"
                  style="left: 0px; position: relative;"
                >
                  利用終了
                </label>
              </div>
            </div>
          </z-flex-stub>
        </div>
      </div>
      <div
        class="v-messages theme--light error--text"
        role="alert"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            契約中のため利用終了にすることができません。先に契約情報を編集してください。
          </div>
        </transition-group-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "phoneticFamilyName") 1`] = `
<div
  class="root"
  data-phonetic-family-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            フリガナ：姓 *
          </label>
          <input
            data-phonetic-family-name-input=""
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              フリガナ：姓を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "phoneticGivenName") 1`] = `
<div
  class="root"
  data-phonetic-given-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            フリガナ：名 *
          </label>
          <input
            data-phonetic-given-name-input=""
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              フリガナ：名を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "postcode") 1`] = `
<div
  class="root"
  data-postcode=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            郵便番号 *
          </label>
          <input
            type="tel"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              郵便番号を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
    <div
      class="v-input__append-outer"
    >
      <z-postcode-resolver-stub
        postcode="545-0034"
      />
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "prefecture") 1`] = `
<div
  class="root"
  data-prefecture=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            都道府県 *
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              大阪府
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
            value="27"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              都道府県を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "sex") 1`] = `
<div
  class="root"
  data-sex=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            性別 *
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              女性
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
            value="2"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              性別を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "street") 1`] = `
<div
  class="root"
  data-street=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            町名・番地 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              町名・番地を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
